--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^18.3.1",
     "apexcharts": "^4.1.0",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.9",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "flatpickr": "^4.6.13",
