--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "flatpickr": "^4.6.13",
+    "jwt-decode": "^4.0.0",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-apexcharts": "^1.6.0",
@@ -36,6 +37,7 @@
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.4.0",
     "react-router": "^7.0.1",
+    "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "react-simple-maps": "^3.0.0",
     "swiper": "^11.1.15",
